# cd1-report

./: README.md  __init__.py  __meta__.py  app.py  cli.py  config.py  db.py  dist.sh  fs.py  pyproject.toml  range.py  requirements.in  requirements.txt  tools.py
sql/: dependencies.yaml  export_proc.sh  export_view.sh  proc_abc_calc_daily_store_stats.sql  proc_customer_order_transaction_report_procedure.sql  proc_customer_report_procedure.sql  proc_invoice_balance_procedure_orders.sql  proc_invoice_balance_procedure_subscriptions.sql  proc_order_report_procedure.sql  proc_xyz_calc_daily_store_driver_stats.sql  view_v_CustomerOrderTransactionReport.sql  view_v_CustomerReport.sql  view_v_OrderReport.sql
